Fix footer icon wrong color

--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -109,6 +109,10 @@ footer {
         outline: none;
         box-shadow: 0 0 0 0.2rem #000;
       }
+
+      .icon {
+        fill: currentColor;
+      }
     }
   }
 }
